@@ -1,5 +1,5 @@
 (* camlp4r ./pa_html.cmo *)
-(* $Id: perso.ml,v 1.37 1999-02-26 10:35:13 ddr Exp $ *)
+(* $Id: perso.ml,v 1.38 1999-02-26 21:30:23 ddr Exp $ *)
 (* Copyright (c) 1999 INRIA *)
 
 open Def;
@@ -212,8 +212,9 @@ value print_dates conf base p =
           [ Some d ->
               let anniv =
                 if d.prec = Sure && p.death = NotDead then
-                  d.day = conf.today.day && d.month = conf.today.month ||
-                  not (leap_year conf.today.year) && d.day = 29 &&
+                  d.day = conf.today.day && d.month = conf.today.month &&
+                  d.year < conf.today.year
+                || not (leap_year conf.today.year) && d.day = 29 &&
                   d.month = 2 && conf.today.day = 1 &&
                   conf.today.month = 3
                 else False
